tests/paczka1/fuzzy1/10759115.err
Error in line 2: QSQY A841 96,9
Error in line 18: S200 S761 1,4
Error in line 29: mh81b A841 157,59
Error in line 27: QSQY S836 70,9
